--- a/info.yaml
+++ b/info.yaml
@@ -1,20 +1,20 @@
 library: JNW_SV_SKY130A
 cell: JNW_SV
 # Your name
-author: Anonymous
+author: Carsten Wulff
 # Your github username
-github: analogicus
+github: wulffern
 # Something funny and descriptive
-tagline: The answer is 42
+tagline: System Verilog Example
 # Your email, if you so wish
-email: anon@anon.com
+email: carsten@wulff.no
 # Your github site, usually <github username>.github.io
-url: analogicus.github.io
+url: analogicus.com
 doc:
   # Make docs
-  #libraries:
-  #   <library>:
-  #       - <cell>
-  #       - <cell>
+  libraries:
+     JNW_SV_SKY130A:
+       - JNW_SV
+       - JNWSW_CM
 sim:
-  # <simdir>: command
+   JNWSW_CM: make typical
